<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="MyTeam"
        android:key="myTeamName"
        android:title="@string/pref_team_name_input"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:maxLines="1"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:defaultValue="sortDate"
        app:entries="@array/sortTypeEntries"
        app:entryValues="@array/sortTypeValues"
        app:key="sortOptionKey"
        app:title="@string/listPreferenceTitle"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="sortDescKey"
        android:title="@string/sortDescOrderTitle" />

</PreferenceScreen>